# TiGa

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
Autopilot2D/: commandAI.cpp  commandAI.h  device.cpp  device.h  gameObject.cpp  gameObject.h  inventory.cpp  inventory.h  mover.cpp  mover.h  moverCharacter.cpp  moverCharacter.h  moverVehicle.cpp  moverVehicle.h  moverVehicleDriver.cpp  objectManager.cpp  objectManager.h  perception.cpp  perception.h  perceptionAI.cpp  predictor.h  projectile.cpp  projectile.h  thruster.cpp  thruster.h  turret.cpp  turret.h  unit.cpp  unit.h  weapon.cpp  weapon.h  weaponBeam.cpp  weaponProjectile.cpp  weaponProjectile.h  weaponTurret.cpp  weaponTurret.h
Autopilot2D/controllers/: RVO2Controller.cpp  RVO2Controller.h  forceController.cpp  forceController.h  vo2Controller.cpp  vo2Controller.h  voController.cpp  voController.h
Console/: Console.h  TestClass.h  bind.cpp  bind.h  main.cpp  procSpawn.cpp  testBind.i  testClass.i
HGETools/: CMakeLists.txt  HGETools.vcxproj  HGETools.vcxproj.filters  basetypes.h  fxObjects.h  fxmanager.h  fxobjects.h  guibase.h  guictrls.h  hgegui.h  hgeguictrls.h  hgeparticle.h  hgerect.h  hgevector.h  keycodes.h  manager.h  particleSystem.h  rect.h  rendercontext.h  resources.h  sound.h  spritedata.h  treenode.h  treenode.hpp
HGETools/hge_old/: hgedistort.cpp  hgeparticle.cpp  hgepmanager.cpp
HGETools/src/: ReadMe.txt  animation.cpp  effect.cpp  font.cpp  fxAnimation.cpp  fxEffect.cpp  fxManager.cpp  fxObjects.cpp  fxParticles.cpp  fxRenderQueue.cpp  fxSound.cpp  fxSprite.cpp  fxanimation.cpp  fxentity.cpp  fxparticles.cpp  fxsound.cpp  fxsprite.cpp  guibase.cpp  guicontrols.cpp  hgecolor.cpp  hgefont.cpp  hgegui.cpp  hgeguictrls.cpp  hgeparticle.cpp  hgerect.cpp  hgesprite.cpp  hgevector.cpp  manager.cpp  parser.cpp  parser.h  renderqueue.cpp  resources.cpp  sprite.cpp  spritedata.cpp  stdafx.cpp  stdafx.h  texture_manager.cpp  tmpobjects.cpp
HGETools/src/hge/: hgeanim.cpp  hgedistort.cpp  hgeparticle.h  hgepmanager.cpp  hgeresource.cpp  hgestrings.cpp
cmake/: FindSDL2.cmake
data/: Normal_Tanks_models_samples.rar  hospital.png.raw  hospital_full.PNG.raw  muzzleflash1.tga  muzzleflash2.tga  muzzleflash3.tga  muzzleflash4.tga  projectiles.max  realism_flash.rar  resources.lua  resources.rcp  simple_building.png.raw
data/Normal Tanks models samples/: H2.max  P2.max  S1.max  VH2_2.max  VH_2.max  palm.max  stub.max
depend/: CMakeLists.txt
doc/: battleships.txt  binding.txt  devices.txt  dynamics.txt  graphics.md  mindlog.txt  schemes.vsd
game/: CMakeLists.txt  Core.cpp  Core.h  ReadMe.txt  bind.bat  bind.h  bind.i  bindCore.i  bindDevices.i  bindFx.i  bindGame.i  bindMath.i  bindObjects.i  bindWorld.i  bind_xml.i  draw.cpp  draw.h  frameBattle.cpp  frameBattle.h  frameHangar.cpp  frameHangar.h  frameMainMenu.cpp  frameMainMenu.h  frameShipyard.cpp  frameShipyard.h  game.cpp  game.h  hgeMain.cpp  level.cpp  luaTools.cpp  multiblock.cpp  multiblock.h  navGraph.cpp  navGraph.h  netLowHigh.h  network.cpp  network.h  shields.cpp  shields.h  shipyard.cpp  (+5 more)
project/: Console.vcxproj  Console.vcxproj.filters  TiGa.sln  TiGa.vcxproj  TiGa.vcxproj.filters  TiGaClient.vcxproj  TiGaServ.vcxproj  bind.vcxproj
prototypes/: Prorotypes.sln  SolidBlocks.cpp  SolidBlocks.vcxproj  SolidBlocks.vcxproj.filters  b2Tools.cpp  b2Tools.h  bullet.cpp  bullet.h  common.cpp  common.h  multiblock.cpp  multiblock.h
script/: RTTI.lua  client.lua  editor.lua  levelEditor.lua  levelRules.lua  mainMenu.lua  oldScripts.txt  scenes.lua  server.lua  startup_Editor.lua  startup_Game.lua  types.lua  utils.lua  utilsDynamics.lua  utilsFx.lua  utilsTiGa.lua
sim/: CMakeLists.txt  basetypes.h  commandAI.cpp  commandAI.h  device.cpp  device.h  gameObject.cpp  gameObject.h  inventory.cpp  inventory.h  mover.cpp  mover.h  moverCharacter.cpp  moverCharacter.h  moverVehicle.cpp  moverVehicle.h  moverVehicleDriver.cpp  objectManager.cpp  objectManager.h  perception.cpp  perception.h  perceptionAI.cpp  predictor.h  projectile.cpp  projectile.h  readme.md  solidobject.cpp  thruster.cpp  thruster.h  turret.cpp  turret.h  unit.cpp  unit.h  weapon.cpp  weapon.h  weaponBeam.cpp  weaponBeam.h  weaponProjectile.cpp  weaponProjectile.h  weaponTurret.cpp  (+1 more)
sim/controllers/: RVO2Controller.cpp  RVO2Controller.h  forceController.cpp  forceController.h  vo2Controller.cpp  vo2Controller.h  voController.cpp  voController.h
sim/luabox/: bindMethodHolder.h  binder.h
simengine/: CMakeLists.txt  application.cpp  application.h
simengine/examples/: CMakeLists.txt  sdl2_minimal_gl_app.cpp  test_application.cpp  test_fx_objects.cpp  test_gui_application.cpp
simengine/fx/: basetypes.h  beam.cpp  color.h  font.cpp  font.h  fxanimation.cpp  fxentity.cpp  fxmanager.h  fxobjects.h  fxsound.cpp  fxsound.h  fxsprite.cpp  manager.cpp  rect.cpp  rect.h  rendercontext.cpp  rendercontext.h  renderqueue.cpp  resources.cpp  shader.cpp  shader.h  soundmanager.cpp  soundmanager.h  spritedata.cpp  spritedata.h  texture_manager.cpp  texture_manager.h  texturemanager.cpp  texturemanager.h  tmpobjects.cpp
simengine/gui/: guibase.cpp  guibase.h  guicontrols.cpp  guictrls.h  keycodes.h
simengine/hge_old/: hgeanim.cpp  hgeanim.h  hgeresource.cpp  hgeresource.h  hgestrings.cpp
simengine/luabox/: CMakeLists.txt  scripter.cpp  scripter.h
simengine/sim/: CMakeLists.txt  basetypes.h  client.cpp  client.h  commandAI.h  debugDraw.cpp  debugDraw.h  device.cpp  device.h  forwards.h  gameObject.cpp  gameObject.h  inventory.h  mover.cpp  moverVehicle.cpp  moverVehicleDriver.cpp  objectManager.cpp  objectManager.h  perception.h  perceptionAI.cpp  projectile.cpp  projectile.h  solidobject.cpp  solidobject.h  thruster.cpp  turret.cpp  unit.cpp  vision.h  weaponTurret.cpp
simengine/sim/controllers/: RVO2Controller.cpp  RVO2Controller.h  forceController.cpp  readme.md  vo2Controller.cpp  voController.cpp  voController.h
simengine/sim/luabox/: CMakeLists.txt  bind.i  bindFields.h  bindMethodHolder.h  bindTypes.h  bind_base.h  binder.h  scripter.cpp  scripter.hpp  scripter.inl
(+75 files in other folders)
